tests/snapshots/test_help__rfc_get_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl rfc get --help
Get RFC metadata or specific field

Usage: govctl rfc get [OPTIONS] <ID> [FIELD]

Arguments:
  <ID>
          Artifact ID

  [FIELD]
          Field name or path (omit to show all)

Options:
  -C, --config <CONFIG>
          Path to govctl config (TOML)

  -o, --output <OUTPUT>
          Output format; valid formats depend on whether FIELD is present

          Possible values:
          - table: Human-readable table for complete resources
          - json:  JSON structured data
          - yaml:  YAML structured data
          - toml:  TOML structured data for complete resources
          - plain: Plain text for logical field values

      --dry-run
          Dry run: preview changes without writing files

  -h, --help
          Print help (see a summary with '-h')

VALID FIELDS:
    - title, version, status, phase, owners, refs, changelog

EXAMPLES:
    govctl rfc get RFC-0001
    govctl rfc get RFC-0001 title
    govctl rfc get RFC-0001 refs
exit: 0
