tests/snapshots/test_help__rfc_root_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl rfc --help
RFC operations

Usage: govctl rfc [OPTIONS] <COMMAND>

Commands:
  list       List RFCs
  get        Get RFC metadata or specific field
  show       Show rendered RFC content
  new        Create a new RFC
  edit       Canonical path-first edit entrypoint
  bump       Bump RFC version
  finalize   Finalize RFC status (draft → normative)
  advance    Advance RFC phase
  deprecate  Deprecate RFC
  supersede  Supersede RFC
  render     Render a single RFC to markdown
  help       Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl rfc list` to discover RFCs
    2. `govctl rfc get <ID> ...` for metadata/fields
    3. `govctl rfc show <ID>` for current rendered prose (`--history` for the archive)
    4. `govctl rfc edit <ID> ...` to update content
    5. `govctl rfc finalize/advance/...` for lifecycle

START HERE:
    - New RFC: `govctl rfc new "Title"`
    - Inspect one RFC: `govctl rfc get RFC-0001`
    - Render one RFC: `govctl rfc show RFC-0001`

NOTES:
    - Clause references such as `RFC-0001:C-SCOPE` are first-class `govctl clause` resources, not RFC subcommands or RFC edit paths.
exit: 0
