tests/snapshots/test_help__work_get_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl work get --help
Get work item metadata or specific field

Usage: govctl work get [OPTIONS] <ID> [FIELD]

Arguments:
  <ID>
          Artifact ID

  [FIELD]
          Field name or path (omit to show all)

Options:
  -C, --config <CONFIG>
          Path to govctl config (TOML)

  -o, --output <OUTPUT>
          Output format; valid formats depend on whether FIELD is present

          Possible values:
          - table: Human-readable table for complete resources
          - json:  JSON structured data
          - yaml:  YAML structured data
          - toml:  TOML structured data for complete resources
          - plain: Plain text for logical field values

      --dry-run
          Dry run: preview changes without writing files

  -h, --help
          Print help (see a summary with '-h')

VALID FIELDS:
    - title, description, status, completed_at, refs, depends_on
    - notes, acceptance_criteria
    - verification.required_guards, verification.waivers

EXAMPLES:
    govctl work get WI-<DATE>-001
    govctl work get WI-<DATE>-001 description
    govctl work get WI-<DATE>-001 acceptance_criteria[0].status
    govctl work get WI-<DATE>-001 verification.required_guards
exit: 0
