tests/snapshots/test_help__work_root_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl work --help
Work item operations

Usage: govctl work [OPTIONS] <COMMAND>

Commands:
  list    List work items
  get     Get work item metadata or specific field
  show    Show rendered work item content
  new     Create a new work item
  edit    Canonical path-first edit entrypoint
  move    Move work item to new status
  delete  Delete work item
  render  Render a single work item to markdown
  help    Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl work list` to discover work items
    2. `govctl work get <ID> ...` for metadata/fields
    3. `govctl work edit` to define scope and acceptance criteria
    4. `govctl work edit <ID> acceptance_criteria[N] --set <text>` to correct a criterion
    5. `govctl work edit <ID> acceptance_criteria[N] --tick <status>` to update criterion status
    6. `govctl work move` to change lifecycle state

START HERE:
    - New work item: `govctl work new "Title"`
    - Activate work: `govctl work move WI-<DATE>-001 active`
    - Inspect one work item: `govctl work get WI-<DATE>-001`
exit: 0
